config server setup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,22 @@
 version: '3.4'
 
 services:
+  config-server:
+    image: fmmobile/config-server:latest
+    build:
+      context: .
+      dockerfile: config-server/Dockerfile
+    ports:
+      - 8888:8888
+    depends_on:
+      - naming-server
+    environment:
+      CONFIG_REPO: https://github.com/FelipeFMMobile/tradewallet_config_server
+      SPRING_PROFILES_ACTIVE: dev
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://naming-server:8761/eureka
+    networks:
+      - network
+
   rabbit-mq:
     image: rabbitmq:3.8.14-management
     ports:
@@ -28,6 +44,9 @@ services:
       dockerfile: naming-server/Dockerfile
     ports:
       - 8761:8761
+    environment:
+      SPRING_CLOUD_CONFIG_URI: http://config-server:8888/
+      SPRING_PROFILES_ACTIVE: dev
     networks:
       - network
 
@@ -37,61 +56,22 @@ services:
       context: .
       dockerfile: api-gateway/Dockerfile
     ports:
-      - 8080:8080
+      - 80:80
     depends_on:
       - naming-server
       - rabbit-mq
+      - config-server
     environment:
       SPRING.ZIPKIN.BASEURIO: http://zipkin-server:9411/
       RABBIT_URI: amqp://guest:guest@rabbit-mq:5672
       SPRING_RABBITMQ_HOST: rabbit-mq
       SPRING_ZIPKIN_SENDER_TYPE: rabbit
-      EUREKA.CLIENT.SERVICEURL.DEFAULTZONE: http://naming-server:8761/eureka
+      SPRING_CLOUD_CONFIG_URI: http://config-server:8888/
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://naming-server:8761/eureka
+      SPRING_PROFILES_ACTIVE: dev
     networks:
       - network
-
-  # cambio-service:
-  #   image: fmmobile/cambio:latest
-  #   restart: always
-  #   build:
-  #     context: .
-  #     dockerfile: cambio/Dockerfile
-  #   ports:
-  #     - 8000:8000
-  #   depends_on:
-  #     - naming-server
-  #     - rabbit-mq
-  #   environment:
-  #     TZ: America/Sao_Paulo
-  #     SPRING.ZIPKIN.BASEURIO: http://zipkin-server:9411/
-  #     RABBIT_URI: amqp://guest:guest@rabbit-mq:5672
-  #     SPRING_RABBITMQ_HOST: rabbit-mq
-  #     SPRING_ZIPKIN_SENDER_TYPE: rabbit
-  #     EUREKA.CLIENT.SERVICEURL.DEFAULTZONE: http://naming-server:8761/eureka
-  #   networks:
-  #     - network
-
-  # book-service:
-  #   image: fmmobile/book-service:latest
-  #   build:
-  #     context: .
-  #     dockerfile: book/Dockerfile
-  #   restart: always
-  #   ports:
-  #     - 8100:8100
-  #   depends_on:
-  #     - naming-server
-  #     - rabbit-mq
-  #   environment:
-  #     TZ: America/Sao_Paulo
-  #     SPRING.ZIPKIN.BASEURIO: http://zipkin-server:9411/
-  #     RABBIT_URI: amqp://guest:guest@rabbit-mq:5672
-  #     SPRING_RABBITMQ_HOST: rabbit-mq
-  #     SPRING_ZIPKIN_SENDER_TYPE: rabbit
-  #     EUREKA.CLIENT.SERVICEURL.DEFAULTZONE: http://naming-server:8761/eureka
-  #   networks:
-  #     - network
-
+  
 networks:
   network:
     driver: bridge
