--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -1,18 +1,15 @@
 server:
-  port: 8080
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka
-sleuth:
-  sampler:
-    probability: 1.0
-springdoc:
-  show-actuator: true
+  port: 80
 spring:
   application:
     name: api-gateway
+  config:
+    import: optional:configserver:http://localhost:8888
   cloud:
+    config:
+      discovery:
+        enabled: true
+        service-id: config-server
     gateway:
       discovery:
         locator:
@@ -25,12 +22,12 @@ spring:
           - Path=/v3/api-docs/**
           filters:
           - RewritePath=/v3/api-docs/(?<path>.*), /$\{path}/v3/api-docs
-#        - id: "cambio"
-#          uri: lb://cambio
-#          predicates:
-#          - Path=/cambio/**
-#        - id: "book-service"
-#          uri: lb://book
-#          predicates:
-#          - Path=/book-service/**
-
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka
+sleuth:
+  sampler:
+    probability: 1.0
+springdoc:
+  show-actuator: true
