--- a/vm/vagrantfile
+++ b/vm/vagrantfile
@@ -4,6 +4,7 @@ Vagrant.configure("2") do |config|
    config.vm.network "private_network", ip: "172.0.2.32", virtualbox__intnet: true
    #config.vm.network "private_network", ip: "192.168.99.9", virtualbox__intnet: true
    # application
+   config.vm.network "forwarded_port", guest: 80, host: 80, autocorrect: true
    config.vm.network "forwarded_port", guest: 8080, host: 8080, autocorrect: true
    # services
    config.vm.network "forwarded_port", guest: 8000, host: 8000, autocorrect: true
