--- a/stock/src/main/resources/application.yml
+++ b/stock/src/main/resources/application.yml
@@ -7,12 +7,12 @@ spring:
     import: optional:configserver:http://localhost:8888
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/tradewallet?useTimezone=true&serverTimezone=UTC
-    username: root
-    password: devrootserver
+    url: jdbc:mysql://${MYSQL_HOST:localhost}:3306/tradewallet?useTimezone=true&serverTimezone=${SERVER_TIMEZONE:UTC}
+    username: ${MYSQL_USER:root}
+    password: ${MYSQL_PASS:devrootserver}
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
@@ -25,7 +25,7 @@ resilience4j:
   ratelimiter:
     instances:
       default:
-        limit-for-period: 5
+        limit-for-period: 10
         limit-refresh-period: 5s
 sleuth:
   sampler:
